build/lexer.c
/* Generated by re2c 4.3 on Tue Nov  4 10:47:54 2025 */
#line 1 "src/lexer.re"
// src/lexer.re
#include <stdio.h>
#include <string.h> // for strndup
#include <stdbool.h>
#include "common.h" // 包含 Scanner 定义
#include "ast.h"    // 包含 AST 定义
#include "parser.tab.h" // 包含 Bison 生成的词法单元定义

// yylex 函数，Bison 将调用此函数获取下一个词法单元
int real_yylex(YYSTYPE *yylval, Scanner *scanner) {
    const unsigned char *yyt1; // re2c 用于捕获文本的指针

    // C 宏定义必须在 re2c 块之外
    #define YYACTION_RESET_ASI scanner->line_terminator_seen = false;

yyc_start: // re2c 规则的起始标签

    
#line 22 "build/lexer.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = *scanner->cursor;
	switch (yych) {
		case '\t':
		case '\v':
		case '\f':
		case ' ': goto yy3;
		case '\n':
		case '\r': goto yy5;
		case '!': goto yy7;
		case '"':
			yyt1 = scanner->cursor;
			goto yy9;
		case '%': goto yy10;
		case '&': goto yy11;
		case '\'':
			yyt1 = scanner->cursor;
			goto yy13;
		case '(': goto yy14;
		case ')': goto yy15;
		case '*': goto yy16;
		case '+': goto yy18;
		case ',': goto yy20;
		case '-': goto yy21;
		case '.':
			yyt1 = scanner->cursor;
			goto yy23;
		case '/': goto yy25;
		case '0':
			yyt1 = scanner->cursor;
			goto yy26;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
			yyt1 = scanner->cursor;
			goto yy28;
		case ':': goto yy29;
		case ';': goto yy30;
		case '<': goto yy31;
		case '=': goto yy33;
		case '>': goto yy35;
		case '?': goto yy37;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'm':
		case 'o':
		case 'p':
		case 'q':
		case 'u':
		case 'x':
		case 'z':
			yyt1 = scanner->cursor;
			goto yy39;
		case '[': goto yy42;
		case ']': goto yy43;
		case '^': goto yy44;
		case 'a':
			yyt1 = scanner->cursor;
			goto yy45;
		case 'b':
			yyt1 = scanner->cursor;
			goto yy46;
		case 'c':
			yyt1 = scanner->cursor;
			goto yy47;
		case 'd':
			yyt1 = scanner->cursor;
			goto yy48;
		case 'e':
			yyt1 = scanner->cursor;
			goto yy49;
		case 'f':
			yyt1 = scanner->cursor;
			goto yy50;
		case 'i':
			yyt1 = scanner->cursor;
			goto yy51;
		case 'l':
			yyt1 = scanner->cursor;
			goto yy52;
		case 'n':
			yyt1 = scanner->cursor;
			goto yy53;
		case 'r':
			yyt1 = scanner->cursor;
			goto yy54;
		case 's':
			yyt1 = scanner->cursor;
			goto yy55;
		case 't':
			yyt1 = scanner->cursor;
			goto yy56;
		case 'v':
			yyt1 = scanner->cursor;
			goto yy57;
		case 'w':
			yyt1 = scanner->cursor;
			goto yy58;
		case 'y':
			yyt1 = scanner->cursor;
			goto yy59;
		case '{': goto yy60;
		case '|': goto yy61;
		case '}': goto yy63;
		case '~': goto yy64;
		case 0xC2: goto yy65;
		case 0xE2: goto yy66;
		case 0xEF: goto yy67;
		default:
			if (scanner->limit <= scanner->cursor) goto yy339;
			goto yy1;
	}
yy1:
	++scanner->cursor;
yy2:
#line 194 "src/lexer.re"
	{
            // 匹配所有其他字符
            YYACTION_RESET_ASI;
            fprintf(stderr, "Lexical error: Unexpected character '%.*s' at line %d\n", 
                (int)(scanner->cursor - scanner->cursor + 1), scanner->cursor, scanner->line);
            goto yyc_start; // 跳过非法字符
        }
#line 183 "build/lexer.c"
yy3:
	yyaccept = 0;
	yych = *(scanner->marker = ++scanner->cursor);
	switch (yych) {
		case '\t':
		case '\v':
		case '\f':
		case ' ': goto yy3;
		case 0xC2: goto yy68;
		case 0xEF: goto yy70;
		default: goto yy4;
	}
yy4:
#line 32 "src/lexer.re"
	{ 
            goto yyc_start; 
        }
#line 201 "build/lexer.c"
yy5:
	yyaccept = 1;
	yych = *(scanner->marker = ++scanner->cursor);
	switch (yych) {
		case '\n':
		case '\r': goto yy5;
		case 0xE2: goto yy71;
		default: goto yy6;
	}
yy6:
#line 43 "src/lexer.re"
	{
            if (scanner->restrict_new_line) {
                // 受限产生式规则被触发！
                scanner->restrict_new_line = false; // 重置状态
                scanner->line_terminator_seen = true; // 报告看到了换行
                return SEMICOLON;
            }
            scanner->line++;
            scanner->line_terminator_seen = true;
            goto yyc_start; // 继续扫描，不返回 token
        }
#line 224 "build/lexer.c"
yy7:
	yych = *++scanner->cursor;
	switch (yych) {
		case '=': goto yy72;
		default: goto yy8;
	}
yy8:
#line 86 "src/lexer.re"
	{ YYACTION_RESET_ASI; return NOT; }
#line 234 "build/lexer.c"
yy9:
	yyaccept = 2;
	yych = *(scanner->marker = ++scanner->cursor);
	switch (yych) {
		case 0x00:
			if (scanner->limit <= scanner->cursor) goto yy2;
			goto yy74;
		case 0x01:
		case 0x02:
		case 0x03:
		case 0x04:
		case 0x05:
		case 0x06:
		case 0x07:
		case 0x08:
		case '\t':
		case '\v':
		case '\f':
		case 0x0E:
		case 0x0F:
		case 0x10:
		case 0x11:
		case 0x12:
		case 0x13:
		case 0x14:
		case 0x15:
		case 0x16:
		case 0x17:
		case 0x18:
		case 0x19:
		case 0x1A:
		case 0x1B:
		case 0x1C:
		case 0x1D:
		case 0x1E:
		case 0x1F:
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF:
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF:
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4: goto yy75;
		default: goto yy2;
	}
yy10:
	++scanner->cursor;
#line 76 "src/lexer.re"
	{ YYACTION_RESET_ASI; return MOD; }
#line 424 "build/lexer.c"
yy11:
	yych = *++scanner->cursor;
	switch (yych) {
		case '&': goto yy84;
		default: goto yy12;
	}
yy12:
#line 83 "src/lexer.re"
	{ YYACTION_RESET_ASI; return BIT_AND; }
#line 434 "build/lexer.c"
yy13:
	yyaccept = 2;
	yych = *(scanner->marker = ++scanner->cursor);
	switch (yych) {
		case 0x00:
			if (scanner->limit <= scanner->cursor) goto yy2;
			goto yy85;
		case 0x01:
		case 0x02:
		case 0x03:
		case 0x04:
		case 0x05:
		case 0x06:
		case 0x07:
		case 0x08:
		case '\t':
		case '\v':
		case '\f':
		case 0x0E:
		case 0x0F:
		case 0x10:
		case 0x11:
		case 0x12:
		case 0x13:
		case 0x14:
		case 0x15:
		case 0x16:
		case 0x17:
		case 0x18:
		case 0x19:
		case 0x1A:
		case 0x1B:
		case 0x1C:
		case 0x1D:
		case 0x1E:
		case 0x1F:
		case ' ':
		case '!':
		case '"':
		case '#':
		case '$':
		case '%':
		case '&':
		case '\'':
		case '(':
		case ')':
		case '*':
		case '+':
		case ',':
		case '-':
		case '.':
		case '/':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case ':':
		case ';':
		case '<':
		case '=':
		case '>':
		case '?':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '[':
		case '\\':
		case ']':
		case '^':
		case '_':
		case '`':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case '{':
		case '|':
		case '}':
		case '~':
		case 0x7F:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF:
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF:
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4: goto yy86;
		default: goto yy2;
	}
yy14:
	++scanner->cursor;
#line 58 "src/lexer.re"
	{ YYACTION_RESET_ASI; return LPAREN; }
#line 624 "build/lexer.c"
yy15:
	++scanner->cursor;
#line 59 "src/lexer.re"
	{ YYACTION_RESET_ASI; return RPAREN; }
#line 629 "build/lexer.c"
yy16:
	yych = *++scanner->cursor;
	switch (yych) {
		case '*': goto yy95;
		case '=': goto yy97;
		default: goto yy17;
	}
yy17:
#line 75 "src/lexer.re"
	{ YYACTION_RESET_ASI; return MUL; }
#line 640 "build/lexer.c"
yy18:
	yych = *++scanner->cursor;
	switch (yych) {
		case '+': goto yy98;
		case '=': goto yy99;
		default: goto yy19;
	}
yy19:
#line 73 "src/lexer.re"
	{ YYACTION_RESET_ASI; return PLUS; }
#line 651 "build/lexer.c"
yy20:
	++scanner->cursor;
#line 64 "src/lexer.re"
	{ YYACTION_RESET_ASI; return COMMA; }
#line 656 "build/lexer.c"
yy21:
	yych = *++scanner->cursor;
	switch (yych) {
		case '-': goto yy100;
		case '=': goto yy101;
		default: goto yy22;
	}
yy22:
#line 74 "src/lexer.re"
	{ YYACTION_RESET_ASI; return MINUS; }
#line 667 "build/lexer.c"
yy23:
	yyaccept = 3;
	yych = *(scanner->marker = ++scanner->cursor);
	switch (yych) {
		case '.': goto yy102;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy103;
		default: goto yy24;
	}
yy24:
#line 62 "src/lexer.re"
	{ YYACTION_RESET_ASI; return DOT; }
#line 688 "build/lexer.c"
yy25:
	yyaccept = 2;
	yych = *(scanner->marker = ++scanner->cursor);
	switch (yych) {
		case '*': goto yy104;
		case '/': goto yy105;
		default: goto yy2;
	}
yy26:
	yyaccept = 4;
	yych = *(scanner->marker = ++scanner->cursor);
	switch (yych) {
		case 'B':
		case 'b': goto yy107;
		case 'O':
		case 'o': goto yy108;
		case 'X':
		case 'x': goto yy109;
		default: goto yy27;
	}
yy27:
	yyt1 = yyt1;
#line 170 "src/lexer.re"
	{
            YYACTION_RESET_ASI;
            yylval->str_val = strndup((const char*)yyt1, scanner->cursor - yyt1);
            return NUMERIC_LITERAL;
        }
#line 717 "build/lexer.c"
yy28:
	yyaccept = 4;
	yych = *(scanner->marker = ++scanner->cursor);
	switch (yych) {
		case '.': goto yy110;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy28;
		default: goto yy27;
	}
yy29:
	++scanner->cursor;
#line 92 "src/lexer.re"
	{ YYACTION_RESET_ASI; return COLON; }
#line 739 "build/lexer.c"
yy30:
	++scanner->cursor;
#line 63 "src/lexer.re"
	{ YYACTION_RESET_ASI; return SEMICOLON; }
#line 744 "build/lexer.c"
yy31:
	yych = *++scanner->cursor;
	switch (yych) {
		case '<': goto yy111;
		case '=': goto yy112;
		default: goto yy32;
	}
yy32:
#line 65 "src/lexer.re"
	{ YYACTION_RESET_ASI; return LT; }
#line 755 "build/lexer.c"
yy33:
	yych = *++scanner->cursor;
	switch (yych) {
		case '=': goto yy113;
		case '>': goto yy115;
		default: goto yy34;
	}
yy34:
#line 93 "src/lexer.re"
	{ YYACTION_RESET_ASI; return ASSIGN; }
#line 766 "build/lexer.c"
yy35:
	yych = *++scanner->cursor;
	switch (yych) {
		case '=': goto yy116;
		case '>': goto yy117;
		default: goto yy36;
	}
yy36:
#line 66 "src/lexer.re"
	{ YYACTION_RESET_ASI; return GT; }
#line 777 "build/lexer.c"
yy37:
	yych = *++scanner->cursor;
	switch (yych) {
		case '?': goto yy119;
		default: goto yy38;
	}
yy38:
#line 91 "src/lexer.re"
	{ YYACTION_RESET_ASI; return CONDITIONAL; }
#line 787 "build/lexer.c"
yy39:
	yych = *++scanner->cursor;
yy40:
	switch (yych) {
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy39;
		default: goto yy41;
	}
yy41:
	yyt1 = yyt1;
#line 144 "src/lexer.re"
	{
            YYACTION_RESET_ASI;
            size_t len = scanner->cursor - yyt1;
            yylval->str_val = strndup((const char*)yyt1, len);
            return IDENTIFIER;
        }
#line 866 "build/lexer.c"
yy42:
	++scanner->cursor;
#line 60 "src/lexer.re"
	{ YYACTION_RESET_ASI; return LBRACK; }
#line 871 "build/lexer.c"
yy43:
	++scanner->cursor;
#line 61 "src/lexer.re"
	{ YYACTION_RESET_ASI; return RBRACK; }
#line 876 "build/lexer.c"
yy44:
	++scanner->cursor;
#line 85 "src/lexer.re"
	{ YYACTION_RESET_ASI; return BIT_XOR; }
#line 881 "build/lexer.c"
yy45:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'w': goto yy120;
		default: goto yy40;
	}
yy46:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'r': goto yy121;
		default: goto yy40;
	}
yy47:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'a': goto yy122;
		case 'l': goto yy123;
		case 'o': goto yy124;
		default: goto yy40;
	}
yy48:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'e': goto yy125;
		case 'o': goto yy126;
		default: goto yy40;
	}
yy49:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'l': goto yy128;
		case 'n': goto yy129;
		case 'x': goto yy130;
		default: goto yy40;
	}
yy50:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'a': goto yy131;
		case 'i': goto yy132;
		case 'o': goto yy133;
		case 'u': goto yy134;
		default: goto yy40;
	}
yy51:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'f': goto yy135;
		case 'm': goto yy137;
		case 'n': goto yy138;
		default: goto yy40;
	}
yy52:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'e': goto yy140;
		default: goto yy40;
	}
yy53:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'e': goto yy141;
		case 'u': goto yy142;
		default: goto yy40;
	}
yy54:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'e': goto yy143;
		default: goto yy40;
	}
yy55:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 't': goto yy144;
		case 'u': goto yy145;
		case 'w': goto yy146;
		default: goto yy40;
	}
yy56:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'h': goto yy147;
		case 'r': goto yy148;
		case 'y': goto yy149;
		default: goto yy40;
	}
yy57:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'a': goto yy150;
		case 'o': goto yy151;
		default: goto yy40;
	}
yy58:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'h': goto yy152;
		case 'i': goto yy153;
		default: goto yy40;
	}
yy59:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0x00: goto yy41;
		case 'i': goto yy154;
		default: goto yy40;
	}
yy60:
	++scanner->cursor;
#line 56 "src/lexer.re"
	{ YYACTION_RESET_ASI; return LBRACE; }
#line 1008 "build/lexer.c"
yy61:
	yych = *++scanner->cursor;
	switch (yych) {
		case '|': goto yy155;
		default: goto yy62;
	}
yy62:
#line 84 "src/lexer.re"
	{ YYACTION_RESET_ASI; return BIT_OR; }
#line 1018 "build/lexer.c"
yy63:
	++scanner->cursor;
#line 57 "src/lexer.re"
	{ YYACTION_RESET_ASI; return RBRACE; }
#line 1023 "build/lexer.c"
yy64:
	++scanner->cursor;
#line 87 "src/lexer.re"
	{ YYACTION_RESET_ASI; return BIT_NOT; }
#line 1028 "build/lexer.c"
yy65:
	yych = *++scanner->cursor;
	switch (yych) {
		case 0xA0: goto yy3;
		default: goto yy2;
	}
yy66:
	yyaccept = 2;
